force-app/main/default/objects/Closure_Stage__c/Closure_Stage__c.object-meta.xml
<CustomObject>
    <label>Closure Stage</label>
    <nameField>
        <displayFormat>CS - {0000}</displayFormat>
        <label>Closure Stages</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Closure Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>