force-app/main/default/objects/Closure_Stage__c/fields/Closed_On__c.field-meta.xml
<CustomField>
    <fullName>Closed_On__c</fullName>
    <label>Closed On</label>
    <length>25</length>
    <type>Text</type>
</CustomField>