force-app/main/default/objects/Closure_Stage__c/fields/Closure_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closure_Amount__c</fullName>
    <label>Closure Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>